# gpg-vault

./: .gitignore  Cargo.toml  README.md  build.rs
src/: args.rs  config.rs  main.rs
