[package]
name = "gpg-vault"
version = "0.1.1"
edition = "2024"
authors = ["sbrfs77@protonmail.com"]
# publish info
license = "GPL-2.0"
description = "A tool for a cli, gpg, yubikey centric development workflow"
repository = "https://github.com/Ben7X/gpg-vault.git"
readme = "README.md"

[dependencies]
anyhow = "1.0.101"
clap = "4.5.59"
clap-verbosity = "2.1.0"
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[build-dependencies]
clap = {version = "4.5.59", features = ["derive"]}
clap_complete = "4.5.66"
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }



